--- a/HarryPotter/HarryPotter.Domain/HarryPotter.Domain.csproj
+++ b/HarryPotter/HarryPotter.Domain/HarryPotter.Domain.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Author.cs" />
+    <Compile Include="Book.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
