--- a/HarryPotter/HarryPotter.Data.Tests/HarryPotter.Data.Tests.csproj
+++ b/HarryPotter/HarryPotter.Data.Tests/HarryPotter.Data.Tests.csproj
@@ -41,7 +41,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\MySql.Data.6.7.4\lib\net40\MySql.Data.dll</HintPath>
     </Reference>
-    <Reference Include="NDbUnit.Core">
+    <Reference Include="NDbUnit.Core, Version=1.6.8.36615, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NDbUnit.Core.1.6.8.0\lib\Net35\NDbUnit.Core.dll</HintPath>
     </Reference>
     <Reference Include="NDbUnit.MySql">
