--- a/HarryPotter/packages/repositories.config
+++ b/HarryPotter/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\HarryPotter.Data.Tests\packages.config" />
   <repository path="..\HarryPotter.Domain\packages.config" />
 </repositories>
