--- a/HarryPotter/HarryPotter.Services/HarryPotter.Services.csproj
+++ b/HarryPotter/HarryPotter.Services/HarryPotter.Services.csproj
@@ -40,8 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BooksService.cs" />
+    <Compile Include="BooksServiceMock.cs" />
+    <Compile Include="IBooksService.cs" />
+    <Compile Include="IOrderService.cs" />
+    <Compile Include="OrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HarryPotter.Domain\HarryPotter.Domain.csproj">
+      <Project>{452DDF95-C224-447A-AB3D-B8839275C8E4}</Project>
+      <Name>HarryPotter.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
