--- a/HarryPotter/HarryPotter.Domain/HarryPotter.Domain.csproj
+++ b/HarryPotter/HarryPotter.Domain/HarryPotter.Domain.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Author.cs" />
     <Compile Include="Book.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrderItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
