Get total for one book in green

--- a/HarryPotter/packages/repositories.config
+++ b/HarryPotter/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\HarryPotter.Data.Tests\packages.config" />
+  <repository path="..\HarryPotter.Domain.Tests\packages.config" />
   <repository path="..\HarryPotter.Domain\packages.config" />
 </repositories>
