--- a/HarryPotter/HarryPotter.StoreApp/HarryPotter.StoreApp.csproj
+++ b/HarryPotter/HarryPotter.StoreApp/HarryPotter.StoreApp.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>HarryPotter.StoreApp</RootNamespace>
     <AssemblyName>HarryPotter.StoreApp</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -34,6 +35,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Iesi.Collections">
+      <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
+    </Reference>
+    <Reference Include="ImproveIT.Data">
+      <HintPath>..\packages\ImproveIT.Data\ImproveIT.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\MySql.Data.6.7.4\lib\net40\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -83,7 +94,9 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\DataSources\HarryPotter.Domain.OrderItem.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -96,6 +109,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HarryPotter.Data\HarryPotter.Data.csproj">
+      <Project>{66EF3CB6-2739-42F1-9ED4-9DAA1C9828E5}</Project>
+      <Name>HarryPotter.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HarryPotter.Domain\HarryPotter.Domain.csproj">
       <Project>{452DDF95-C224-447A-AB3D-B8839275C8E4}</Project>
       <Name>HarryPotter.Domain</Name>
